<resources>
    <string name="app_name">Venture - Daily Challenges</string>

    <!--  Category Names  -->
    <string name="physical_wellbeing">Physical Wellbeing</string>
    <string name="mental_wellbeing">Mental Wellbeing</string>
    <string name="socialising">Socialising</string>
    <string name="education_learning">Education and Learning</string>
    <string name="skills_hobbies">Skills and Hobbies</string>


    <!--  Text View Labels  -->
    <string name="streak_label">Streaks: </string>
    <string name="skips_label">Skips: </string>

    <string name="info_label">Challenge Info</string>
    <string name="read_more_label">Read More</string>
    <string name="links_label">Useful Links:</string>
    <string name="last_completed_label">Last Completed: </string>
    <string name="total_completed_label">Total Completed: </string>

    <string name="about_us_label">About Us</string>
    <string name="legal_label">Legal</string>
    <string name="team_label">Our Team</string>
    <string name="thanks_label">Special Thanks</string>
    <string name="twitter_label">Twitter</string>
    <string name="instagram_label">Instagram</string>
    <string name="facebook_label">Facebook</string>
    <string name="linkedin_label">LinkedIn</string>
    <string name="terms_label">Terms and Conditions</string>
    <string name="privacy_label">Privacy Policy</string>


    <!--  Button Labels  -->
    <string name="complete_label">Complete</string>
    <string name="skip_label">Skip</string>
    <string name="reset_label">Reset All Data</string>
    <string name="next_label">Next</string>
    <string name="finish_label">Finish</string>

    <string name="yes_label">YES</string>
    <string name="no_label">NO</string>
    <string name="ok_label">OK</string>


    <!--  Credits Names  -->
    <string name="sang_name">Sang Nguyen</string>
    <string name="ned_name">Nedeesha Weerasuriya</string>
    <string name="saif_name">Saif Widyatmoko</string>
    <string name="ross_name">Ross Pendleton</string>
    <string name="kenny_name">Kenny Ekwonna</string>
    <string name="rijal_name">Rijal Widyatmoko</string>

    <string name="sang_role">Project Leader, Programmer</string>
    <string name="ned_role">UI Designer, Content Writer</string>
    <string name="saif_role">Business Director, Content Writer</string>
    <string name="ross_role">Content Manager, Administrator</string>
    <string name="kenny_role">For helping coordinate our startup</string>
    <string name="rijal_role">For designing our logo</string>

    <string name="sang_link">https://www.linkedin.com/in/sang-nguyen-a42712a7/</string>
    <string name="ned_link">https://www.linkedin.com/in/nedeesha-w-089983a6/</string>
    <string name="saif_link">https://www.linkedin.com/in/saif-widyatmoko/</string>
    <string name="ross_link">https://www.linkedin.com/in/ross-pendleton-7501b6197/</string>
    <string name="kenny_link">https://www.linkedin.com/in/ekenemchukwu-ekwonna/</string>
    <string name="rijal_link">https://www.instagram.com/jalmoko/</string>
    <string name="terms_link">
        https://docs.google.com/document/d/1u_qSkUXHlgEWFjsVs-l6xzRN7mlqxgTLQd1OJA0YHtQ/
    </string>
    <string name="privacy_link">
        https://docs.google.com/document/d/1J-DrZg_nB02CPE1slhzfF45tdwmMnx1Tw2vjeKCAmWE/
    </string>


    <!--  Links  -->
    <string name="twitter_link">https://twitter.com/Vdailychallenge</string>
    <string name="instagram_link">https://www.instagram.com/vdailychallenge/</string>
    <string name="facebook_link">https://www.facebook.com/Venture-108053924345819</string>
    <string name="linkedin_link">https://www.linkedin.com/company/okomi-labs</string>


    <!--  Drawer Layout Labels  -->
    <string name="home_label">Home</string>
    <string name="list_label">Challenges</string>
    <string name="help_label">Help</string>
    <string name="about_label">About</string>


    <!--  Dialog Titles and Messages  -->
    <string name="refresh_title">Challenge period is over</string>
    <string name="refresh_message">A new day has started. Refreshing challenge…</string>
    <string name="complete_title">Mark as Complete</string>
    <string name="complete_message">Would you like to mark this challenge as complete?</string>
    <string name="skip_title">Skip Challenge</string>
    <string name="reset_title_1">Reset Data</string>
    <string name="reset_title_2">ARE YOU SURE?</string>

    <string name="skip_unavailable_message">You have no skips. Please wait until tomorrow.</string>
    <string name="skip_no_ads_message">Please connect to the internet to load an ad first.</string>
    <string name="skip_available_message">
        Would you like to watch a short ad to skip this challenge?
    </string>
    <string name="freeze_title">Freeze Streak</string>
    <string name="freeze_unavailable_message">
        You have no freezes left. Gain more by building up a streak.
    </string>
    <string name="freeze_available_message">Would you like to freeze your streak?</string>
    <string name="freeze_gained_title">Freeze Gained</string>
    <string name="freeze_gained_message">You gained a freeze for keeping up your streak! </string>
    <string name="reset_message_1">
        You will lose all recorded data including your completed challenges and streaks.
    </string>
    <string name="reset_message_2">THIS ACTION CANNOT BE UNDONE</string>


    <!--  Text View Messages  -->
    <string name="welcome_message">Welcome, your\nchallenge today is…</string>
    <string name="completed_list_message">Your completed challenges\nwill appear here</string>

    <string name="tutorial_text_1">
        You get a new randomly generated challenge everyday. Tap the challenge card for interesting
        trivia and useful links.
    </string>
    <string name="tutorial_text_2">
        If, for any reason, you are unable to complete a challenge, you can skip the
        challenge up to 2 times a day.
    </string>
    <string name="tutorial_text_3">
        Tap the complete button to set today\'s challenge as complete. Keep completing challenges to
        build up your streak.
    </string>
    <string name="tutorial_text_4">
        Every 5 challenges you complete in a row, you earn a freeze which preserves your streak for
        a day if you would like a break.
    </string>

    <string name="first_launch_message_1">
        Thank you for downloading Venture. We greatly appreciate your support.
    </string>
    <string name="first_launch_message_2">
        Would you like our quick guide on how to use the interface?
    </string>
    <string name="first_launch_yes_button">Yes, please</string>
    <string name="first_launch_no_button">No, thanks</string>


    <!--  Image Content Descriptions  -->
    <string name="venture_logo_desc">Venture Logo</string>
    <string name="streak_icon_desc">Streak Icon</string>
    <string name="freeze_icon_desc">Freeze Icon</string>
    <string name="category_icon_desc">Category Icon</string>
    <string name="arrow_icon_desc">Arrow Icon</string>
    <string name="tutorial_desc">Tutorial</string>
    <string name="about_icon_desc">About Icon</string>
    <string name="credited_link_desc">Link to Credited</string>


    <!--  SHARED PREFERENCES KEYS  -->
    <string name="challenge_key">com.okomilabs.dailychallenges.challenge</string>
    <string name="last_login">login</string>
    <string name="curr_id">id</string>
    <string name="challenge_complete">challenge_complete</string>

    <string name="stats_key">com.okomilabs.dailychallenges.stats</string>
    <string name="streak_value">streak</string>

    <string name="resources_key">com.okomilabs.dailychallenges.resources</string>
    <string name="skip_challenges">skip_challenge_</string>
    <string name="num_skipped">num_skipped</string>
    <string name="skips_remaining">skips</string>
    <string name="freezes_remaining">freezes</string>
    <string name="shown_freeze_msg">shown_freeze</string>

    <string name="settings_key">com.okomilabs.dailychallenges.settings</string>
    <string name="first_launch">first_launch</string>


    <!--  AdMob Test Device IDs  -->
    <string name="sang_oppo">1805DBC7E2E5F4F767CC5BBD50879F8B</string>
    <string name="ned_motorola">724ACB32D31860CB411FA8FAEFF1ABF0</string>
    <string name="saif_pixel">2E7D1F0D183432DE37EC93B817A53EFC</string>
    <string name="ross_huawei">8B6B70DA26722EF2013A4859BE7D3265</string>


    <!--  AdMob IDs  -->
    <string name="admob_id">ca-app-pub-6520975918360419~6174148309</string>
    <string name="banner_ad">ca-app-pub-6520975918360419/4861066639</string>
    <string name="reward_ad">ca-app-pub-6520975918360419/1352942751</string>
    <string name="test_banner_ad">ca-app-pub-3940256099942544/6300978111</string>
    <string name="test_reward_ad">ca-app-pub-3940256099942544/5224354917</string>

    <!-- Notifications -->
    <string name="channel_id">notification_channel</string>
    <string name="channel_name">reminder</string>
    <string name="channel_description">daily_notification</string>
    <string name="reminder_content">Complete_your_daily_challenge_for_the_day!</string>
    <string name="notification_on">Turned_on_daily_notifications</string>
    <string name="notification_off">Notifications_removed</string>
    <string name="notifications_key">com.okomilabs.dailychallenges.notifications</string>

</resources>
